--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/button1"
+        android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Open new Activity!"
-        android:textSize="32dp"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"/>
+        android:layout_above="@+id/button2"
+        android:layout_alignEnd="@+id/button2"
+        android:layout_alignRight="@+id/button2"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="94dp"
+        android:text="Camara" />
+
+    <Button
+        android:id="@+id/button2"
+    android:layout_width="134dp"
+    android:layout_height="58dp"
+    android:layout_centerInParent="true"
+    android:text="Video" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="141dp"
+        android:layout_height="57dp"
+        android:layout_above="@+id/button2"
+        android:layout_alignEnd="@+id/button2"
+        android:layout_alignRight="@+id/button2"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="-194dp"
+        android:text="Grabadora" />
 </RelativeLayout>
